# quadcopter-firmware

./: .gitignore  CMakeLists.txt  README.md  pico_sdk_import.cmake
include/: CommandReceiver.h  ESCController.h  FlightController.h  GPSManager.h  IMUManager.h  MPU9250IMU.h  MadgwickFilter.h  MotorController.h  NEO8MGPS.h  PWMESCController.h  SensorFusion.h  TelemetryManager.h  UltrasonicSensor.h
src/: CommandReceiver.cpp  FlightController.cpp  MPU9250IMU.cpp  MadgwickFilter.cpp  NEO8MGPS.cpp  PWMESCController.cpp  SensorFusion.cpp  TelemetryManager.cpp  UltrasonicSensor.cpp  main.cpp
